# ChangeLog for media-fonts/roboto
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/roboto/ChangeLog,v 1.3 2013/10/21 12:16:29 grobian Exp $

  21 Oct 2013; Fabian Groffen <grobian@gentoo.org> roboto-20120823.ebuild:
  Marked ~x64-macos, bug #486818

  20 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> roboto-20111129.ebuild:
  No open bugs. Stable on amd64 and x86. Mark testing on amd64-linux and
  x86-linux.

*roboto-20111129 (25 Jul 2012)

  25 Jul 2012; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +roboto-20111129.ebuild:
  Initial commit. Ebuild by user BT in bug #423727.