@@ -1,16 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX 90-roboto-regular.conf 260 SHA256 0a3f4426f12528b0bc9ca7e2b8061c879c57064ef26f2d41770c28df3c92ac8d SHA512 4bf25418cd2de172d4e4686aa14bd09de01d6a9fd9f3865c85f5415210e6f5ffb27859c9811bf4ba2bea428894b33b4586e0cb276db9c8a8e8c5ac77139646da WHIRLPOOL cf08413ab0e1158b220551ec1cd7f499dcad22e40ab32275a04ebb9b225bab7ce5631809f41765dade8dd05f0e2eb8fe916249885c786f4786ad6cdf5688e54e
 DIST Roboto_Hinted_20111129.zip 1505810 SHA256 95b27de10473c91c624f58736a3d4435230f8d106d4b0c9bf6fd8f5fb023bd02 SHA512 af9d7a597dcdc68399d1d081331a62245a27d883391dc196a2e9ae7d02fc8a4ae8593fe365a5d58941a88b234380838634c3ef17a2c10bafc0497babe5790009 WHIRLPOOL 2d7f2a948ce8a3771e010cedace76c7b703f0c27eadfdc9258ae2ad901354afb453fe9c4eca3f21afeab768cebd6a187c56f7341216ecc178d38e1729ea916d2
 DIST Roboto_Hinted_20120823.zip 1456846 SHA256 bb4ea48fd30b7260528b2579e7f900c168df8c5e91428a0463733673ea913690 SHA512 ce4af34d0a23dd4076d033dcb03f17335eb83317da72b45257291be3aa34ff589405bfdfb768faca769d401a9091b63e5f195704ed69874d7d17289ca436a785 WHIRLPOOL 54997f7a566b008387bb293b68f6d5547d93ec12b272692bec4187751cf78d470d0ea86b898f9e6268d7f0c192a4193959bd931ae8604121a887eb5217cec461
+DIST roboto-1.100141.zip 1627285 SHA256 f5e5c3d0dadfe0ef2108333a7b15bdd6ab6745a53610144078373d415749e14c SHA512 be4ac24d99b8bc5564568eaa2545b8f45c0ceb6dfd38639f0ccbe7841a4513de1b70a196355e12f3aa1e60441b56ff9a6900d759e4f4438bd8cbf23adf534b23 WHIRLPOOL c39e45371ac24e92a2d6d45450d1463697e900571f4400da1b7b6f1f785fc81d19b714d52da88d5be327f0857e476608836c32fa5902bf944b2f10b0d95a5971
 EBUILD roboto-20111129.ebuild 619 SHA256 730302ba2619dab88d5585f8cc4a0f04791e927b23c8488c626ad0070a3cc872 SHA512 dfd1086cffa7306237eb046c950906755ca32b05944a5c8cf3b865d06578571b13e5f21c08313fe090de3bb19bda6c3d2b4089f3ea1c519eaba0ec8e89f959fe WHIRLPOOL 7c4fe233c90e6ccc9cb04082eae2bbb621e9ea577ecd9e8a196a22350c0bb74f04bbd9806f33d8f1dbcaa65093e6c27a838d79e351c6bd2fed7368dd81ffe092
 EBUILD roboto-20120823.ebuild 627 SHA256 32acdd58089012f116ec439929e0d3de8e5bbd11a4aec0e11c06e1d5f92e94ae SHA512 63f5df126e7a3ae166f10a0374cf0a24dd5e330b01e14d89c7418d4751498d77d684111da6abfb250faef8225b9bf2ce3a9bb96e40c0535e4fd49f74fe0be0fd WHIRLPOOL 642c4223473e521eb00910dfe12258a27632bada44574c5b7225c26a94e71590b514f02f654d243cf8e85bf74b225a2195d17271e5093912beb0b97b260b66a6
-MISC ChangeLog 659 SHA256 1314e66543c129abb1606bc0664fcb88f0e829a3d181d2002cb59a8e6573510b SHA512 e94c70b4979f3ec736601702453d7e83b506b549b0ec18285e431f045acda7686b11ee00134b821f16840c934b8cc2867fc960d8b6213d68db72e6660768d5ff WHIRLPOOL 6a2067a89eef15ef889ad233979c1fa5bbedbd980223fdc3b8b55af59b940cadb3f021118f7131a2537c6fc94eb85b70a1831c97ab0a56f0be5305ae125c7aca
+EBUILD roboto-20130731.ebuild 686 SHA256 5dacc1b480989b67cdbe36c605cbd370603b1ec08cfcc3531e102f2c47b913d5 SHA512 4362f13c9df26d90c96cd529ca581429ecb26b6efc1ff1ab6b8f8661fc559fe8ded4853abf7436d8edaaa569616e459277620ef5dd83b298e807f3466d60c940 WHIRLPOOL 4f2d989f660a5c58f7a8235e6d8b80e73ce6e50929ec361f518c76bad0f2d90fc59890eeff4003cfe5dfb4ccbb2facdde772466183bd5b9217df7b46b5965f95
+MISC ChangeLog 927 SHA256 ad98946e5cf9ba66bb8596fe3ac0544daff1ba0a1de3801475da48a7f6fe55ca SHA512 70d9c89326b8e0436d8be970249df13a394a6480452ffd7a2722701f1e1fac88fe1cd138039029f0f241ec5860dd82d69a67b4d28f18ba7343870f6ceb5f84ed WHIRLPOOL 2bb0b942b2263ee5d55703815ac2ff7f33a7ee5e4fa2802da9d2798f60b62d062e88a57eb99c27aeea7f6da336848055d4dad25a6a700f8b04b0904db4c67d39
 MISC metadata.xml 160 SHA256 f98af670c6967591fe20a2cf4ef27d68f8b6dfb2799f8a4cc051003f5c95f7c0 SHA512 309b994cd299c4e1e99212e9f531f63773f48b1255b1c5518f5f7c61f245045c579a7854b481c9b7ffdd79f7e71c417bfdd353ed6431903288a40e2e357b19ad WHIRLPOOL fc94ab822cf0a7455b83c600ee9333f3ad6a683f71bb17b33a21dc86d25dafa060192d7576a849668bb3f88b46f3ff7422a4d06830154bd33540a9f7a50bc1d8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (SunOS)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJlGx4ACgkQX3X2B8XHTom/OgCfcNactOICAvP0fW3YlQl2QYLl
-BpsAnjFWE0JW6XvQQht6RMs1l7tMUfoZ
-=GKwR
+iQJ8BAEBCABmBQJSaqcSXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGODRENkQ2QkI1MzlEMURGNTkyNjYxNjUy
+QjI0NzRBRDQzQ0UyOTZFAAoJECskdK1DziluvrwP/3ZySc/RqtPmbpLjh1QzY5cv
+cvvrJpJv0UM3UiQtEH/DxVQs0XgvL9oc63v0TTbwkqwfrVjDdcVOe9i/gv7c1UwQ
+vbhlmSeD9Cq+xZ+I7QM84wVWV9m4rnMOCQ91dZyORyAA4qQ7wXO79vxBjA4WyJpq
+/svelsycTnw5V6BQnNgakRTjrCsogTp2hFXp4p/wWGvBq0j4ePC4YOjlntOfW04w
+r6HWOcvS4fE9MhE52bh0XDWJvqFroN6KUPwjfYOJ83ZGs6yHH6Nq5XutpWozLn0k
+ZT041Sc4Q9qT2Y1E2FlYVAqA4Qy14uqfR+RFSp8pRxeiBaKCQ/9oI/DFUDmDcmeQ
+mYjNFO8svkrsTZWzugkczbfp6L6rP8k8i4mhsg+NFJ0oNbhQUvbS6lfzuQThR+jT
+ej7F6udOrh3UYBojOta5LoXEZ4vqMK2WqE2kKAGX75hH/ybJXHsCjdtzfa/baltn
+rL6TZjW/3Kbu1JMClC/dadrcxwq9G++O4B5cE5Ox2ML2o4W0WCkZLLr8vGQ3CAyY
+jT/TnWEnXrtq2UUUnAG9mKkAOf4iPk3HOHB6dNDKc7Aqbk0Uoow4TGqyVaPWNZdq
+01lSiLbiPW+SE8Wv3CkH2s0c1tvnH6y+zfK41qTC1Kcy1oJLJV2zzqgNZElVTBGY
+dB11nXTRjtaHbq0D9slO
+=xBUC
 -----END PGP SIGNATURE-----
