@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<fontconfig>
+
+	<match target="pattern">
+		<test name="family" compare="eq"><string>Roboto</string></test>
+		<edit name="weight" mode="append"><const>regular</const></edit>
+	</match>
+
+</fontconfig>
