@@ -1,0 +1,21 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/roboto/roboto-20130731.ebuild,v 1.1 2013/10/25 17:14:52 yngwin Exp $
+
+inherit font
+
+MY_PV="1.100141"
+
+DESCRIPTION="Standard font for Android 4.0 (Ice Cream Sandwich) and later"
+HOMEPAGE="http://developer.android.com/design/style/typography.html"
+SRC_URI="http://developer.android.com/downloads/design/${PN}-${MY_PV}.zip"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~x64-macos"
+IUSE=""
+
+S="${WORKDIR}/${PN}-${MY_PV}"
+FONT_S="${S}"
+FONT_SUFFIX="ttf"
+FONT_CONF=( "${FILESDIR}/90-roboto-regular.conf" )
