@@ -1,0 +1,11 @@
+DEFINED_PHASES=install postinst postrm setup
+DEPEND=X? ( x11-apps/mkfontdir media-fonts/encodings )
+DESCRIPTION=Standard font for Android 4.0 (Ice Cream Sandwich) and later
+HOMEPAGE=http://developer.android.com/design/style/typography.html
+IUSE=X
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux ~x64-macos
+LICENSE=Apache-2.0
+SLOT=0
+SRC_URI=http://developer.android.com/downloads/design/roboto-1.100141.zip
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	font	37271e0911f39dd15a28adcaf94f6956	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=cb3061cdb137652197099b75eb9b1f6b
